--- a/style.css
+++ b/style.css
@@ -45,3 +45,44 @@ div{
     font-weight: bold;
     margin-right: auto;
 }
+
+/* Home CSS */
+#home{
+    display: flex;
+    max-width: 1100px;
+    margin: auto;
+    padding-top: 40px;
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+.title-graphic img{
+    max-width: 600px;
+}
+.title{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.title h1{
+    font-size: 3.5rem;
+    margin: 0;
+}
+.title p{
+    font-size: 1.2em;
+    padding: 10px 0;
+}
+
+.signup-btn{
+    border: 2px solid white;
+    border-radius: 30px;
+    font-size: 1.1rem;
+    padding:10px 35px;
+    margin: 0 10px;
+    background-color: white;
+    color:#5E3DEE
+}
+.signup-btn:hover{
+    color: white;
+    background-color:#5E3DEE
+}
+
