--- a/style.css
+++ b/style.css
@@ -335,3 +335,14 @@ i{
 .social div:hover i{
     color: #5E3DEE;
 }
+
+/* fixed header menu */
+
+.fixed{
+    position: fixed;
+    top:0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    box-shadow: 0px 1px 3px #00000066;
+}
